test/fail/issue-4625/call.did
type X = null;
service : {
  f: (X) -> ();
}
